2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use #define for RCS file keywords.

	* base.h (KS): New macro.
	(Kaccess): Convert from var decl to #define; use `KS'.
	(Kauthor, Kbranch, Kcomment, Kdate, Kdesc, Kexpand, Khead, Klocks)
	(Klog, Knext, Kstate, Kstrict, Ksymbols, Ktext): Likewise.
	* rcssyn.c (Kaccess): Delete var.
	(Kauthor, Kbranch, Kcomment, Kdate, Kdesc, Kexpand, Khead, Klocks)
	(Klog, Knext, Kstate, Kstrict, Ksymbols, Ktext): Likewise.
	(Kbranches): Rename from `K_branches'; convert from var to #define.
	[COMPAT2] (Ksuffix): Convert from var to #define.
	(getdelta): Use `Kbranches'.

2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move some constant data from rcsutil.c to b-anchor.c.

	* b-anchor.c (prog_diff, prog_diff3, diff_flags, equal_line):
	New, moved without change from...
	* rcsutil.c (prog_diff, prog_diff3, diff_flags, equal_line):
	...here.

2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul "keyword-substitution mode name" recognition.

	* b-anchor.c (kwsub_pool): New static `uint8_t' array.
	(recognize_kwsub, kwsub_string): New funcs.
	* base.h (recognize_kwsub): New func decl.
	(str2expmode): New macro.
	(kwsub_string): New func decl.
	(str2expmode): Delete func decl.
	* rcsgen.c (putadmin): Use `kwsub_string'.
	* rcssyn.c (expand_names): Delete data structure.
	(strn2expmode, str2expmode): Delete funcs.
	(getadmin): Use `recognize_kwsub'.
	* rlog.c (main): Use `kwsub_string'.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul (working file) keyword recognition.

	* b-anchor.c: New file.
	* Makefile.am (libparts_a_SOURCES):
	Add b-anchor.c; remove rcskeys.c.
	* base.h: #include <stdint.h>.
	(AUTHOR, DATE, HEADER, IDH, LOCKER, LOG, NAME, RCSFILE, REVISION)
	(SOURCE, STATE): Delete #define:s.
	(tinysym, pool_found): New structs.
	(markers): From this enum, remove `Nomatch'.
	(recognize_keyword): New func decl.
	(Keyword): Delete var decl.
	(trymatch): Delete func decl.